Spring Data Jpa practice

--- a/Day-05/MappingRequest/src/main/resources/templates/requestBody.html
+++ b/Day-05/MappingRequest/src/main/resources/templates/requestBody.html
@@ -46,7 +46,7 @@
             address: address
         };
 
-        fetch('/home', {
+        fetch('/requestBody', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json'
