--- a/Day-08/BestStore/src/main/resources/templates/products/CreateProduct.html
+++ b/Day-08/BestStore/src/main/resources/templates/products/CreateProduct.html
@@ -13,7 +13,8 @@
        <div class="col-md-8 mx-auto rounded border p-4 m-4">
            <h2 class="text-center mb-5">Add a New Product</h2>
 
-           <form method="post" enctype="multipart/form-data" th:object="${productDto}"></form>
+           <form
+                   method="post" enctype="multipart/form-data" th:object="${productDto}"></form>
        </div>
    </div>
 </div>
