--- a/Day-08/BestStore/src/main/resources/templates/products/CreateProduct.html
+++ b/Day-08/BestStore/src/main/resources/templates/products/CreateProduct.html
@@ -13,8 +13,80 @@
        <div class="col-md-8 mx-auto rounded border p-4 m-4">
            <h2 class="text-center mb-5">Add a New Product</h2>
 
-           <form
-                   method="post" enctype="multipart/form-data" th:object="${productDto}"></form>
+           <form method="post" enctype="multipart/form-data" th:object="${productDto}">
+
+                    <div class="row mb-3">
+                        <label  class="col-sm-4 col-form-label">Name</label>
+                        <div class="col-sm-8">
+                            <input class="form-control" th:field="${productDto.name}}">
+                            <p th:if="${#fields.hasErrors('name')}" th:errorclass="text-danger"
+                                th:errors="${productDto.name}"></p>
+                        </div>
+                    </div>
+
+                    <div class="row mb-3">
+                         <label  class="col-sm-4 col-form-label">Name</label>
+                         <div class="col-sm-8">
+                             <input class="form-control" th:field="${productDto.brand}}">
+                             <p th:if="${#fields.hasErrors('brand')}" th:errorclass="text-danger"
+                                  th:errors="${productDto.brand}"></p>
+                         </div>
+                    </div>
+
+                     <div class="row mb-3">
+                         <label  class="col-sm-4 col-form-label">Name</label>
+                         <div class="col-sm-8">
+                             <select  class="form-select" th:field="${productDto.category}">
+                                 <option value="Other">Other</option>
+                                 <option value="Other">Phones</option>
+                                 <option value="Other">Computers</option>
+                                 <option value="Other">Accessories</option>
+                                 <option value="Other">Printers</option>
+                                 <option value="Other">Cameras</option>
+                             </select>
+                            <p th:if="${#fields.hasErrors('category')}" th:errorclass="text-danger"
+                                th:errors="${productDto.category}"></p>
+                         </div>
+                      </div>
+
+                     <div class="row mb-3">
+                            <label  class="col-sm-4 col-form-label">Price</label>
+                             <div class="col-sm-8">
+                                 <input class="form-control" type="number" step="0.01" min="0" th:field="${productDto.price}}">
+                                 <p th:if="${#fields.hasErrors('price')}" th:errorclass="text-danger"
+                                    th:errors="${productDto.price}"></p>
+                             </div>
+                    </div>
+
+                     <div class="row mb-3">
+                            <label  class="col-sm-4 col-form-label">Description</label>
+                            <div class="col-sm-8">
+                                <textarea class="form-control" th:field="${productDto.description}"></textarea>
+                                <p th:if="${#fields.hasErrors('description')}" th:errorclass="text-danger"
+                                    th:errors="${productDto.description}"></p>
+                             </div>
+                     </div>
+
+                    <div class="row mb-3">
+                            <label  class="col-sm-4 col-form-label">Image</label>
+                            <div class="col-sm-8">
+                                 <input class="form-control" type="file" step="0.01" min="0" th:field="${productDto.imageFile}}">
+                                  <p th:if="${#fields.hasErrors('imageFile')}" th:errorclass="text-danger"
+                                    th:errors="${productDto.imageFile}"></p>
+                             </div>
+                     </div>
+
+                    <div class="row">
+                            <div  class="offset-sm-4 col-sm-4 d-grid">
+                                <button type="submit" class="btn btn-primary">Submit</button>
+                            </div>
+                            <div class="col-sm-4 d-grid">
+                                <a href="/products" class="btn btn-outline-primary" role="button">Cancel</a>
+                            </div>
+                    </div>
+
+
+           </form>
        </div>
    </div>
 </div>
