--- a/Day-08/BestStore/src/main/resources/templates/products/EditProduct.html
+++ b/Day-08/BestStore/src/main/resources/templates/products/EditProduct.html
@@ -10,8 +10,16 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8 mx-auto rounded border p-4 m-4">
-            <h2 class="text-center mb-5">Add a New Product</h2>
+            <h2 class="text-center mb-5">Update the product</h2>
             <form method="post" enctype="multipart/form-data"  th:object="${productDto}">
+
+                <div class="row mb-3">
+                    <label class="col-sm-4 col-form-label">ID of the Product</label>
+                    <div class="col-sm-8">
+                        <input readonly class="form-control-plaintext" th:value="${product.id}">
+                    </div>
+                </div>
+
                 <div class="row mb-3">
                     <label class="col-sm-4 col-form-label">Name</label>
                     <div class="col-sm-8">
@@ -60,10 +68,23 @@
                 </div>
 
                 <div class="row mb-3">
+                    <div class="offset-sm-4 col-sm-8">
+                        <img th:src="@{'/images/' + ${product.imageFilename}}" alt="Product Image" width="150">
+                    </div>
+                </div>
+
+                <div class="row mb-3">
                     <label class="col-sm-4 col-form-label">Image</label>
                     <div class="col-sm-8">
                         <input name="imageFilename" class="form-control" type="file" th:field="*{imageFilename}">
                         <p th:if="${#fields.hasErrors('imageFilename')}" class="text-danger" th:errors="*{imageFilename}"></p>
+                    </div>
+                </div>
+
+                <div class="row mb-3">
+                    <label class="col-sm-4 col-form-label">Created At</label>
+                    <div class="col-sm-8">
+                        <input readonly class="form-control-plaintext" th:value="${product.createdAt}">
                     </div>
                 </div>
 
@@ -75,7 +96,9 @@
                         <a href="/products" class="btn btn-outline-primary" role="button">Cancel</a>
                     </div>
                 </div>
+
             </form>
+
         </div>
     </div>
 </div>
