--- a/Day-08/BestStore/src/main/resources/templates/products/index.html
+++ b/Day-08/BestStore/src/main/resources/templates/products/index.html
@@ -32,14 +32,15 @@
                 <td th:text="${product.category}"></td>
                 <td th:text="${product.price}"></td>
                 <td>
-                    <img th:src="@{/images/{image}(image = ${product.imageFilename}) }" alt="Product Image"  width="100"></img>
+                    <img th:src="@{'/images/' + ${product.imageFilename}}" alt="Product Image" width="100">
+
                 </td>
                 <td th:text="${product.createdAt.toString().substring(0,10)}"></td>
                 <td style="white-space:nowrap">
                      <a  class="btn btn-primary btn-sm"
                         th:href="@{/products/edit(id=${product.id})}">Edit</a>
                      <a  class="btn btn-primary btn-sm"
-                    th:href="@{/products/delete(id=${product.id})}"
+                        th:href="@{/products/delete(id=${product.id})}"
                          onclick="return confirm('Are you sure?')">Delete</a>
                  </td>
             </tr>
